2016-02-11 ajwillia.ms (Andy Williams)

	* Add a filename filter to the filepanel

2015-11-19 ajwillia.ms (Andy Williams)

	* Update for the efl 1.16 release

2015-08-27 ajwillia.ms (Andy Williams)

	* Trim trailing whitespace from lines during save

2015-07-17 ajwillia.ms (Andy Williams)

	* Create new files in the selected directory rather than project root

2015-06-07 ajwillia.ms (Andy Williams)

	* Indent newlines to match whitespace in the previous line

2015-05-31 ajwillia.ms (Andy Williams)

	* Add launch configuration so we can run a built binary

2015-05-30 ajwillia.ms (Andy Williams)

	* Added a monospaced font picker to settings

2015-05-26 ajwillia.ms (Andy Williams)

	* Add new icon from raster and update welcome/about image layouts

2015-05-18 ajwillia.ms (Andy Williams)

	* Remember open tabs and windows per project
	* Allow hiding of the toolbar
	* Added a main menu to move items off toolbar

2015-08-15 ajwillia.ms (Andy Williams)

	* Remember UI settings per-project in <proj>/.edi/

2015-04-20 ajwillia.ms (Andy Williams)

	* Highlight lines containing TODO or FIXME

2015-03-15 ajwillia.ms (Andy Williams)

	* Fix issues with re-opening closed tabs
	* Fix crash-on-open for some systems

2015-03-08 ajwillia.ms (Andy Williams)

	* Add a settings screen

2015-02-28 Vincent Torri

	* Fix username lookup for Windows

2015-02-21 ajwillia.ms (Andy Williams)

	* Release 0.0.1

2015-02-11 ajwillia.ms (Andy Williams)

	* Make sure clang syntax loading follows auto saves

2015-02-08 ajwillia.ms (Andy Williams)

	* Add an about window to credit our contributors

2015-02-07 wilsonk (Kelly Wilson)

	* Remember file types when we open-as in the editor

2014-11-22 ajwillia.ms (Andy Williams)

	* Add a diff rendering component to edi

2014-11-09 ajwillia.ms (Andy Williams)

	* Add build and test functions to toolbar

2014-10-09 ajwillia.ms (Andy Williams)

	* Add clang syntax highlighting

2014-09-28 ajwillia.ms (Andy Williams)
