@@ -1,3 +1,7 @@
+2016-02-21 ajwillia.ms (Andy Williams)
+
+	* Fix crash when deleting a selection ending in newline
+
 2016-02-11 ajwillia.ms (Andy Williams)
 
 	* Add a filename filter to the filepanel
